# CSC591-R-Tree-Operations-in-C-

./: BTree.cpp  CMakeLists.txt  README.md  RTree.cpp
include/a1/btree/: BTree.hpp
include/a2/rtree/: RTree.hpp
include/catch2/: catch.hpp
src/: CMakeLists.txt  main.cpp
src/btree/: BTree.cpp  CMakeLists.txt
src/rtree/: CMakeLists.txt  RTree.cpp
test/: CMakeLists.txt  unitTests.cpp
test/btree/: btree-lookup-tests.cpp  btree-range-tests.cpp  btree-tests.cpp
test/rtree/: rtree-knn-tests.cpp  rtree-lookup-tests.cpp  rtree-range-tests.cpp  rtree-tests.cpp
